--- a/index.html
+++ b/index.html
@@ -54,35 +54,35 @@
       </div>
       <div class="dropdown-content">
         <ul id="listaCategorias" class="category-list">
-          <li><a href="./pages/usados.html">Usados</a></li>
-          <li><a href="./pages/nuevos.html">Nuevo</a></li>
-          <li><a href="#">TERROR</a></li>
-          <li><a href="./pages/adultoJoven.html">Adulto Joven</a></li>
-          <li><a href="./pages/descuentos.html">DESCUENTO</a></li>
-          <li><a href="#">NOVEDAD</a></li>
-          <li><a href="#">FANTASÍA</a></li>
-          <li><a href="#">NOVELA</a></li>
-          <li><a href="#">CUENTO</a></li>
-          <li><a href="#">ANTOLOGÍA</a></li>
-          <li><a href="#">POESÍA</a></li>
-          <li><a href="./pages/infantil.html">INFANTIL</a></li>
-          <li><a href="#">AUTOAYUDA</a></li>
-          <li><a href="#">THRILLER Y CRIMEN</a></li>
-          <li><a href="#">NOVELA HISTORICA</a></li>
-          <li><a href="./pages/otros.html">OTROS</a></li>
-          <li><a href="#">NOVELA CONTEMPORÁNEA</a></li>
-          <li><a href="#">DESARROLLO FINANCIERO</a></li>
-          <li><a href="#">ESOTERISMO</a></li>
-          <li><a href="#">FILOSOFÍA</a></li>
-          <li><a href="./pages/clasicos.html">CLÁSICOS</a></li>
-          <li><a href="#">AESPIRITUALIDAD</a></li>
-          <li><a href="#">PSICOLOGÍA</a></li>
-          <li><a href="/pages/geek.html">CULTURA GEEK</a></li>
-          <li><a href="./pages/novelaRomantica.html">NOVELA ROMANTICA</a></li>
-          <li><a href="#">ROMANCE</a></li>
-          <li><a href="./pages/cafeteria.html">CAFETERÍA</a></li>
-          <li><a href="./pages/tienda.html">TIENDA LITERARIA</a></li>
-          <li><a href="./pages/navidad.html">NAVIDAD</a></li>
+          <li><a class="cat" href="./pages/usados.html">Usados</a></li>
+          <li><a class="cat" href="./pages/nuevos.html">Nuevo</a></li>
+          <li><a class="cat" href="#">TERROR</a></li>
+          <li><a class="cat" href="./pages/adultoJoven.html">Adulto Joven</a></li>
+          <li><a class="cat" href="./pages/descuentos.html">DESCUENTO</a></li>
+          <li><a class="cat" href="#">NOVEDAD</a></li>
+          <li><a class="cat" href="#">FANTASÍA</a></li>
+          <li><a class="cat" href="#">NOVELA</a></li>
+          <li><a class="cat" href="#">CUENTO</a></li>
+          <li><a class="cat" href="#">ANTOLOGÍA</a></li>
+          <li><a class="cat" href="#">POESÍA</a></li>
+          <li><a class="cat" href="./pages/infantil.html">INFANTIL</a></li>
+          <li><a class="cat" href="#">AUTOAYUDA</a></li>
+          <li><a class="cat" href="#">THRILLER Y CRIMEN</a></li>
+          <li><a class="cat" href="#">NOVELA HISTORICA</a></li>
+          <li><a class="cat" href="./pages/otros.html">OTROS</a></li>
+          <li><a class="cat" href="#">NOVELA CONTEMPORÁNEA</a></li>
+          <li><a class="cat" href="#">DESARROLLO FINANCIERO</a></li>
+          <li><a class="cat" href="#">ESOTERISMO</a></li>
+          <li><a class="cat" href="#">FILOSOFÍA</a></li>
+          <li><a class="cat" href="./pages/clasicos.html">CLÁSICOS</a></li>
+          <li><a class="cat" href="#">AESPIRITUALIDAD</a></li>
+          <li><a class="cat" href="#">PSICOLOGÍA</a></li>
+          <li><a class="cat" href="/pages/geek.html">CULTURA GEEK</a></li>
+          <li><a class="cat" href="./pages/novelaRomantica.html">NOVELA ROMANTICA</a></li>
+          <li><a class="cat" href="#">ROMANCE</a></li>
+          <li><a class="cat" href="./pages/cafeteria.html">CAFETERÍA</a></li>
+          <li><a class="cat" href="./pages/tienda.html">TIENDA LITERARIA</a></li>
+          <li><a class="cat" href="./pages/navidad.html">NAVIDAD</a></li>
         </ul>
       </div>
     </aside>
