--- a/pages/clasicos.html
+++ b/pages/clasicos.html
@@ -21,7 +21,7 @@
   <header class="topbar">
     <div class="menu-container">
       <div class="div_logo">
-        <img src="./imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" />
+        <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" />
       </div>
       <div class="TopBar_center__bP0o5">
         <nav class="menu">
@@ -166,7 +166,7 @@
       style="width: 1127px; margin-left: auto !important; margin-right: auto !important; display: block; max-width: 100% !important">
       <div style="display: flex; justify-content: space-between;">
         <div>
-          <img src="./imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
+          <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
     height: auto;" />
         </div>
         <div style="text-align: justify; width: 50%;">
@@ -188,7 +188,7 @@
 
         </div>
         <div style="display: flex;justify-content: flex-end;align-items: flex-start;">
-          <img src="./imagenes/Screenshot 2025-06-11 191709.png" alt="" srcset="">
+          <img src="../imagenes/Screenshot 2025-06-11 191709.png" alt="" srcset="">
         </div>
 
       </div>
