fixed in page clasicos and index

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li><a class="cat" href="./pages/usados.html">Usados</a></li>
           <li><a class="cat" href="./pages/nuevos.html">Nuevo</a></li>
           <li><a class="cat" href="#">TERROR</a></li>
-          <li><a class="cat" href="./pages/adultoJoven.html">Adulto Joven</a></li>
+          <li><a class="cat" href="./pages/adultoJoven.html">ADULTO JOVEN</a></li>
           <li><a class="cat" href="./pages/descuentos.html">DESCUENTO</a></li>
           <li><a class="cat" href="#">NOVEDAD</a></li>
           <li><a class="cat" href="#">FANTASÍA</a></li>
