--- a/pages/clasicos.html
+++ b/pages/clasicos.html
@@ -27,7 +27,7 @@
         <nav class="menu">
           <ul class="nav-links">
             <li><a href="#"><img src="/imagenes/home.svg" style="width: 16px;" alt="" srcset="">Home</a></li>
-            <li><a href="../index.html"><img src="./imagenes/grid.svg" alt="" srcset=""> Catalogo</a></li>
+            <li><a href="../index.html"><img src="/imagenes/grid.svg" alt="" srcset=""> Catalogo</a></li>
             <li><a href="#"><span class="material-icons">
                   phone_in_talk
                 </span> Whatsapp</a></li>
