add media queries

--- a/pages/adultoJoven.html
+++ b/pages/adultoJoven.html
@@ -60,9 +60,7 @@
 
   <div class="page-content">
     <main class="catalog" style="padding-top: 50px;">
-      <div style="width: 1127px;
-        margin-left: auto !important;
-        margin-right: auto !important;">
+      <div >
         <h2>ADULTO JOVEN</h2>
         <div class="product-grid">
           <div class="product-card">
@@ -182,8 +180,8 @@
       style="width: 1127px; margin-left: auto !important; margin-right: auto !important; display: block; max-width: 100% !important">
       <div style="display: flex; justify-content: space-between;">
         <div>
-          <img src="./imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
-    height: auto;" />
+          <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="width: 100px;
+    height: auto; display: block;"/>
         </div>
         <div style="text-align: justify; width: 50%;">
           <h3 style="font-size: 15px; font-weight: 700; margin-bottom: 10px; color: #fff;">Sobre Nosotros</h3>
@@ -204,7 +202,7 @@
 
         </div>
         <div style="display: flex;justify-content: flex-end;align-items: flex-start;">
-          <img src="./imagenes/Screenshot 2025-06-11 191709.png" alt="" srcset="">
+          <img src="../imagenes/Screenshot 2025-06-11 191709.png" alt="" srcset="">
         </div>
 
       </div>
