--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div style="display: flex; justify-content: space-between;">
         <div>
           <img src="./imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
-    height: auto;" />
+    height: auto;display: block;" />
         </div>
         <div style="text-align: justify; width: 50%;">
           <h3 style="font-size: 15px; font-weight: 700; margin-bottom: 10px; color: #fff;">Sobre Nosotros</h3>
