--- a/pages/geek.html
+++ b/pages/geek.html
@@ -59,9 +59,7 @@ f=false,w=window,d=document,v=d.querySelector('#vwoCode'),cK='_vwo_'+account_id+
 
   <div class="page-content">
     <main class="catalog" style="padding-top: 50px;">
-      <div style="width: 1127px;
-        margin-left: auto !important;
-        margin-right: auto !important;">
+      <div>
         <h2>CULTURA GEEK</h2>
         <div class="product-grid">
           <div class="product-card">
@@ -103,7 +101,7 @@ f=false,w=window,d=document,v=d.querySelector('#vwoCode'),cK='_vwo_'+account_id+
       <div style="display: flex; justify-content: space-between;">
         <div>
           <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
-    height: auto;" />
+    height: auto; display: block;" />
         </div>
         <div style="text-align: justify; width: 50%;">
           <h3 style="font-size: 15px; font-weight: 700; margin-bottom: 10px; color: #fff;">Sobre Nosotros</h3>
