--- a/pages/usados.html
+++ b/pages/usados.html
@@ -41,7 +41,7 @@
         <nav class="menu">
           <ul class="nav-links">
             <li><a href="#"><img src="/imagenes/home.svg" style="width: 16px;" alt="" srcset="">Home</a></li>
-            <li><a href="../index.html"><img src="./imagenes/grid.svg" alt="" srcset=""> Catalogo</a></li>
+            <li><a href="../index.html"><img src="/imagenes/grid.svg" alt="" srcset=""> Catalogo</a></li>
             <li><a href="#"><span class="material-icons">
                   phone_in_talk
                 </span> Whatsapp</a></li>
@@ -60,9 +60,7 @@
 
   <div class="page-content">
     <main class="catalog" style="padding-top: 50px;">
-      <div style="width: 1127px;
-        margin-left: auto !important;
-        margin-right: auto !important;">
+      <div>
         <h2>NOVELA ROMANTICA</h2>
         <div class="product-grid">
           <div class="product-card">
@@ -168,7 +166,7 @@
       <div style="display: flex; justify-content: space-between;">
         <div>
           <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
-    height: auto;" />
+    height: auto;display: block;" />
         </div>
         <div style="text-align: justify; width: 50%;">
           <h3 style="font-size: 15px; font-weight: 700; margin-bottom: 10px; color: #fff;">Sobre Nosotros</h3>
