--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="./imagenes/logo (1).png">
-  <title>Catálogo - Libros Arzu</title>
+  <title>Libros Arzu - Catalogo</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="styleVariante.css" />
   <!-- Start VWO Async SmartCode -->
   <link rel="preconnect" href="https://dev.visualwebsiteoptimizer.com" />
   <script type='text/javascript' id='vwoCode'>
@@ -34,14 +34,21 @@
 <body>
   <header class="topbar">
     <div class="menu-container">
+
       <div class="div_logo">
-        <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" />
+
+        <img src="./imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" />
       </div>
+      <!-- Hamburguesa solo visible en móvil -->
+      <button id="menuToggle" class="hamburguesa-btn">
+        ☰
+      </button>
       <div class="TopBar_center__bP0o5">
         <nav class="menu">
           <ul class="nav-links">
-            <li><a href="#"><img src="/imagenes/home.svg" style="width: 16px;" alt="" srcset="">Home</a></li>
-            <li><a href="../index.html"><img src="/imagenes/grid.svg" alt="" srcset=""> Catalogo</a></li>
+
+            <li><a href="#"><img src="/imagenes/home.svg" alt="" srcset="">Home</a></li>
+            <li><a href="#"><img src="./imagenes/grid.svg" alt="" srcset=""> Catalogo</a></li>
             <li><a href="#"><span class="material-icons">
                   phone_in_talk
                 </span> Whatsapp</a></li>
@@ -54,119 +61,161 @@
             </svg>
           </button>
         </nav>
+
       </div>
     </div>
   </header>
 
   <div class="page-content">
-    <main class="catalog" style="padding-top: 50px;">
+
+    <aside class="sidebar" id="sidebar">
+
+      <div id="toggleCategorias" class="dropDown_list">
+        <h2>Categorías</h2>
+      </div>
+      <div class="categorias-menu">
+
+        <div class="categoria">
+          <button class="categoria-btn">
+            Literatura
+            <span class="material-icons flecha">
+              expand_more
+            </span>
+          </button>
+
+          <div class="subcategoria">
+            <a class="cat" href="#">Novela</a>
+            <a class="cat" href="#">Cuento</a>
+            <a class="cat" href="#">Antología</a>
+            <a class="cat" href="#">Poesía</a>
+            <a class="cat" href="./pages2/clasicos.html">Clásicos</a>
+          </div>
+        </div>
+
+        <div class="categoria">
+          <button class="categoria-btn">Ficción
+            <span class="material-icons flecha">
+              expand_more
+            </span>
+          </button>
+          <div class="subcategoria">
+            <a class="cat" href="#">Fantasía</a>
+            <a class="cat" href="#">Terror</a>
+            <a class="cat" href="#">Thriller y crimen</a>
+            <a class="cat" href="#">Novela histórica</a>
+            <a class="cat" href="#">Novela contemporánea</a>
+            <a class="cat" href="./pages2/novelaRomantica.html">Novela romántica</a>
+            <a class="cat" href="#">Romance</a>
+            <a class="cat" href="#">Romance juvenil</a>
+            <a class="cat" href="./pages2/infantil.html">Infantil</a>
+            <a class="cat" href="./pages2/adultoJoven.html">Adulto joven</a>
+          </div>
+        </div>
+
+        <!-- No ficción -->
+        <div class="categoria">
+          <button class="categoria-btn">No ficción <span class="material-icons flecha">
+              expand_more
+            </span></button>
+          <div class="subcategoria">
+            <a class="cat" href="#">Autoayuda</a>
+            <a class="cat" href="#">Psicología</a>
+            <a class="cat" href="#">Filosofía</a>
+            <a class="cat" href="#">Espiritualidad</a>
+            <a class="cat" href="#">Esoterismo</a>
+            <a class="cat" href="#">Finanzas y desarrollo personal</a>
+            <a class="cat" href="#">Historia</a>
+          </div>
+        </div>
+
+        <!-- Destacados -->
+        <div class="categoria">
+          <button class="categoria-btn">Destacados <span class="material-icons flecha">
+              expand_more
+            </span></button>
+          <div class="subcategoria">
+            <a class="cat" href="./pages2/nuevos.html">Nuevos</a>
+            <a class="cat" href="#">Novedades</a>
+            <a class="cat" href="./pages2/descuentos.html">Descuentos</a>
+            <a class="cat" href="./pages2/navidad.html">Navidad</a>
+            <a class="cat" href="./pages2/usados.html">Usados</a>
+            <a class="cat" href="./pages2/otros.html">Otros</a>
+          </div>
+        </div>
+
+        <!-- Cultura y ocio -->
+        <div class="categoria">
+          <button class="categoria-btn">Cultura y ocio <span class="material-icons flecha">
+              expand_more
+            </span></button>
+          <div class="subcategoria">
+            <a class="cat" href="./pages2/geek.html">Cultura geek</a>
+            <a class="cat" href="./pages2/cafeteria.html">Cafetería</a>
+            <a class="cat" href="./pages2/tienda.html">Tienda literaria</a>
+          </div>
+        </div>
+      </div>
+
+    </aside>
+    <!-- Overlay para fondo oscuro -->
+    <div class="overlay" id="overlay"></div>
+
+    <main class="catalog">
       <div>
-        <h2>Usados</h2>
+        <h2>Ultimos Productos Agregados</h2>
         <div class="product-grid">
           <div class="product-card">
-            <img src="../imagenes/usados/1.jpg" alt="CUANDO DESPIERTE...">
-            <h3>RUMBO A UNA VIDA...</h3>
-            <p class="price">₡6500</p>
+            <img src="./imagenes/image 24.png" alt="CUANDO DESPIERTE...">
+            <h3>CUANDO DESPIERTE...</h3>
+            <p class="price">₡17500</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/usados/2.jpg" alt="HOTARU">
-            <h3>DIRIGENTES DEL MUND...
-            </h3>
-            <p class="price">₡6500</p>
+            <img src="./imagenes/image 25.png" alt="HOTARU">
+            <h3>HOTARU</h3>
+            <p class="price">₡18500</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/usados/3.jpg" alt="EL HOMBRE DE TIZA">
-            <h3>SANACIONES MILAGRO...</h3>
-            <p class="price">₡6500</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/usados/4.jpeg" alt="EL INVIERNO DEL LOBO">
-            <h3>DE LA AUTOESTIMA AL ESGOÍ...</h3>
+            <img src="./imagenes/image 26.png" alt="EL HOMBRE DE TIZA">
+            <h3>EL HOMBRE DE TIZA</h3>
             <p class="price">₡8500</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/usados/5.jpeg" alt="LA IRA DE LOS ÁNGELES">
-            <h3>RECUENTOS PARA DEMI...</h3>
-            <p class="price">₡6800</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/usados/6.jpg" alt="LA IRA DE LOS ÁNGELES">
-            <h3>LA DIETA DE LAS PRIN...</h3>
-            <p class="price">₡6000</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/usados/7.jpg" alt="EL PSICOANALISTA">
-            <h3>LOS 100 SECRETOS DE...</h3>
-            <p class="price">₡3000</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/usados/8.webp" alt="CUANDO DESPIERTEN LAS FLORES">
-            <h3>LA MAGIA DEL ORDEN</h3>
-            <p class="price">₡4500</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/usados/9.jpg" alt="SCARPETTA">
-            <h3>EL HOMBRE MAS RIC...</h3>
-            <p class="price">₡5800</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/usados/10.jpeg" alt="SCARPETTA">
-            <h3>TODO LO QUE PUEDAS IM...</h3>
-            <p class="price">₡5500</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/usados/11.jpeg" alt="SCARPETTA">
-            <h3>EL PODER DEL PERDON</h3>
-            <p class="price">₡3000</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/usados/12.jpeg" alt="SCARPETTA">
-            <h3>EL ARTE DE AMAR</h3>
-            <p class="price">₡5500</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/usados/13.jpeg" alt="SCARPETTA">
-            <h3>LOS 7 HABITOS DE LA ...</h3>
+            <img src="./imagenes/image 27.png" alt="EL INVIERNO DEL LOBO">
+            <h3>EL INVIERNO DEL LOBO</h3>
             <p class="price">₡6500</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/usados/14.jpeg" alt="SCARPETTA">
-            <h3>SANTA EVITA
-            </h3>
-            <p class="price">₡5800</p>
+            <img src="./imagenes/image 6.png" alt="LA IRA DE LOS ÁNGELES">
+            <h3>LA IRA DE LOS ÁNGELES</h3>
+            <p class="price">₡6500</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/usados/15.jpg" alt="SCARPETTA">
-            <h3>TROPICO DE CAPRICO</h3>
+            <img src="./imagenes/image 7.png" alt="EL PSICOANALISTA">
+            <h3>EL PSICOANALISTA</h3>
             <p class="price">₡6500</p>
+          </div>
+          <div class="product-card">
+            <img src="./imagenes/image 13.png" alt="CUANDO DESPIERTEN LAS FLORES">
+            <h3>EL CORAZON DE LAS...</h3>
+            <p class="price">₡7500</p>
+          </div>
+          <div class="product-card">
+            <img src="./imagenes/image 12.png" alt="SCARPETTA">
+            <h3>SCARPETTA</h3>
+            <p class="price">₡7500</p>
           </div>
         </div>
       </div>
     </main>
+
   </div>
-
-  <div class="paginador">
-    <button class="paginador-btn flecha arrow1"><span class="material-icons">
-        arrow_back_ios
-      </span></button>
-    <button class="paginador-btn">1</button>
-    <button class="paginador-btn">2</button>
-    <button class="paginador-btn">3</button>
-    <button class="paginador-btn">4</button>
-    <button class="paginador-btn">15</button>
-    <button class="paginador-btn flecha arrow2"><span class="material-icons">
-        arrow_forward_ios
-      </span></button>
-  </div>
-
-
-  <footer style="background-color: #101010; padding: 30px 0;  margin-top: 6%;">
+  <footer style="background-color: #101010; padding: 30px 0;  margin-top: 22.5%;">
     <div
       style="width: 1127px; margin-left: auto !important; margin-right: auto !important; display: block; max-width: 100% !important">
       <div style="display: flex; justify-content: space-between;">
         <div>
-          <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
-    height: auto;display: block;" />
+          <img src="./imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
+    height: auto;" />
         </div>
         <div style="text-align: justify; width: 50%;">
           <h3 style="font-size: 15px; font-weight: 700; margin-bottom: 10px; color: #fff;">Sobre Nosotros</h3>
@@ -187,7 +236,7 @@
 
         </div>
         <div style="display: flex;justify-content: flex-end;align-items: flex-start;">
-          <img src="../imagenes/Screenshot 2025-06-11 191709.png" alt="" srcset="">
+          <img src="./imagenes/Screenshot 2025-06-11 191709.png" alt="" srcset="">
         </div>
 
       </div>
@@ -196,7 +245,7 @@
       </div>
     </div>
   </footer>
-  <script src="/main.js"></script>
+  <script src="/mainVariante.js"></script>
 </body>
 
 </html>
