--- a/pages/cafeteria.html
+++ b/pages/cafeteria.html
@@ -165,7 +165,7 @@ f=false,w=window,d=document,v=d.querySelector('#vwoCode'),cK='_vwo_'+account_id+
       style="width: 1127px; margin-left: auto !important; margin-right: auto !important; display: block; max-width: 100% !important">
       <div style="display: flex; justify-content: space-between;">
         <div>
-          <img src="./imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
+          <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
     height: auto; display: block;" />
         </div>
         <div style="text-align: justify; width: 50%;">
@@ -187,7 +187,7 @@ f=false,w=window,d=document,v=d.querySelector('#vwoCode'),cK='_vwo_'+account_id+
 
         </div>
         <div style="display: flex;justify-content: flex-end;align-items: flex-start;">
-          <img src="./imagenes/Screenshot 2025-06-11 191709.png" alt="" srcset="">
+          <img src="../imagenes/Screenshot 2025-06-11 191709.png" alt="" srcset="">
         </div>
 
       </div>
