--- a/pages2/otros.html
+++ b/pages2/otros.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <link rel="icon" type="image/png" href="./imagenes/logo (1).png">
-  <title>DESCUENTOS - Libros Arzu</title>
+  <link rel="icon" type="image/png" href="./imagenes/logo (1).png">
+  <title>OTROS - Libros Arzu</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,8 +14,8 @@
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="../style.css" />
-  <!-- Start VWO Async SmartCode -->
+  <link rel="stylesheet" href="../styleVariante.css" />
+ <!-- Start VWO Async SmartCode -->
 <link rel="preconnect" href="https://dev.visualwebsiteoptimizer.com" />
 <script type='text/javascript' id='vwoCode'>
 window._vwo_code || (function() {
@@ -27,7 +27,7 @@ hide_element_style = 'opacity:0 !important;filter:alpha(opacity=0) !important;ba
 /* DO NOT EDIT BELOW THIS LINE */
 f=false,w=window,d=document,v=d.querySelector('#vwoCode'),cK='_vwo_'+account_id+'_settings',cc={};try{var c=JSON.parse(localStorage.getItem('_vwo_'+account_id+'_config'));cc=c&&typeof c==='object'?c:{}}catch(e){}var stT=cc.stT==='session'?w.sessionStorage:w.localStorage;code={nonce:v&&v.nonce,library_tolerance:function(){return typeof library_tolerance!=='undefined'?library_tolerance:undefined},settings_tolerance:function(){return cc.sT||settings_tolerance},hide_element_style:function(){return'{'+(cc.hES||hide_element_style)+'}'},hide_element:function(){if(performance.getEntriesByName('first-contentful-paint')[0]){return''}return typeof cc.hE==='string'?cc.hE:hide_element},getVersion:function(){return version},finish:function(e){if(!f){f=true;var t=d.getElementById('_vis_opt_path_hides');if(t)t.parentNode.removeChild(t);if(e)(new Image).src='https://dev.visualwebsiteoptimizer.com/ee.gif?a='+account_id+e}},finished:function(){return f},addScript:function(e){var t=d.createElement('script');t.type='text/javascript';if(e.src){t.src=e.src}else{t.text=e.text}v&&t.setAttribute('nonce',v.nonce);d.getElementsByTagName('head')[0].appendChild(t)},load:function(e,t){var n=this.getSettings(),i=d.createElement('script'),r=this;t=t||{};if(n){i.textContent=n;d.getElementsByTagName('head')[0].appendChild(i);if(!w.VWO||VWO.caE){stT.removeItem(cK);r.load(e)}}else{var o=new XMLHttpRequest;o.open('GET',e,true);o.withCredentials=!t.dSC;o.responseType=t.responseType||'text';o.onload=function(){if(t.onloadCb){return t.onloadCb(o,e)}if(o.status===200||o.status===304){_vwo_code.addScript({text:o.responseText})}else{_vwo_code.finish('&e=loading_failure:'+e)}};o.onerror=function(){if(t.onerrorCb){return t.onerrorCb(e)}_vwo_code.finish('&e=loading_failure:'+e)};o.send()}},getSettings:function(){try{var e=stT.getItem(cK);if(!e){return}e=JSON.parse(e);if(Date.now()>e.e){stT.removeItem(cK);return}return e.s}catch(e){return}},init:function(){if(d.URL.indexOf('__vwo_disable__')>-1)return;var e=this.settings_tolerance();w._vwo_settings_timer=setTimeout(function(){_vwo_code.finish();stT.removeItem(cK)},e);var t;if(this.hide_element()!=='body'){t=d.createElement('style');var n=this.hide_element(),i=n?n+this.hide_element_style():'',r=d.getElementsByTagName('head')[0];t.setAttribute('id','_vis_opt_path_hides');v&&t.setAttribute('nonce',v.nonce);t.setAttribute('type','text/css');if(t.styleSheet)t.styleSheet.cssText=i;else t.appendChild(d.createTextNode(i));r.appendChild(t)}else{t=d.getElementsByTagName('head')[0];var i=d.createElement('div');i.style.cssText='z-index: 2147483647 !important;position: fixed !important;left: 0 !important;top: 0 !important;width: 100% !important;height: 100% !important;background: white !important;display: block !important;';i.setAttribute('id','_vis_opt_path_hides');i.classList.add('_vis_hide_layer');t.parentNode.insertBefore(i,t.nextSibling)}var o=window._vis_opt_url||d.URL,s='https://dev.visualwebsiteoptimizer.com/j.php?a='+account_id+'&u='+encodeURIComponent(o)+'&vn='+version;if(w.location.search.indexOf('_vwo_xhr')!==-1){this.addScript({src:s})}else{this.load(s+'&x=true')}}};w._vwo_code=code;code.init();})();
 </script>
-<!-- End VWO Async SmartCode -->
+<!-- End VWO Async SmartCode -->>
 </head>
 
 <body>
@@ -36,11 +36,15 @@ f=false,w=window,d=document,v=d.querySelector('#vwoCode'),cK='_vwo_'+account_id+
       <div class="div_logo">
         <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" />
       </div>
+      <!-- Hamburguesa solo visible en móvil -->
+      <button id="menuToggle" class="hamburguesa-btn">
+        ☰
+      </button>
       <div class="TopBar_center__bP0o5">
         <nav class="menu">
           <ul class="nav-links">
             <li><a href="#"><img src="/imagenes/home.svg" style="width: 16px;" alt="" srcset="">Home</a></li>
-            <li><a href="../index.html"><img src="/imagenes/grid.svg"  alt="" srcset=""> Catalogo</a></li>
+            <li><a href="../index2.html"><img src="/imagenes/grid.svg" alt="" srcset=""> Catalogo</a></li>
             <li><a href="#"><span class="material-icons">
                   phone_in_talk
                 </span> Whatsapp</a></li>
@@ -58,88 +62,176 @@ f=false,w=window,d=document,v=d.querySelector('#vwoCode'),cK='_vwo_'+account_id+
   </header>
 
   <div class="page-content">
-    <main class="catalog" style="padding-top: 50px;">
+    <aside class="sidebar" id="sidebar">
+      <div id="toggleCategorias" class="dropDown_list">
+        <h2>Categorías</h2>
+      </div>
+      <div class="categorias-menu">
+
+        <div class="categoria">
+          <button class="categoria-btn">
+            Literatura
+            <span class="material-icons flecha">
+              expand_more
+            </span>
+          </button>
+
+          <div class="subcategoria">
+            <a class="cat" href="#">Novela</a>
+            <a class="cat" href="#">Cuento</a>
+            <a class="cat" href="#">Antología</a>
+            <a class="cat" href="#">Poesía</a>
+            <a class="cat" href="clasicos.html">Clásicos</a>
+          </div>
+        </div>
+
+        <div class="categoria">
+          <button class="categoria-btn">Ficción
+            <span class="material-icons flecha">
+              expand_more
+            </span>
+          </button>
+          <div class="subcategoria">
+            <a class="cat" href="#">Fantasía</a>
+            <a class="cat" href="#">Terror</a>
+            <a class="cat" href="#">Thriller y crimen</a>
+            <a class="cat" href="#">Novela histórica</a>
+            <a class="cat" href="#">Novela contemporánea</a>
+            <a class="cat" href="novelaRomantica.html">Novela romántica</a>
+            <a class="cat" href="#">Romance</a>
+            <a class="cat" href="#">Romance juvenil</a>
+            <a class="cat" href="infantil.html">Infantil</a>
+            <a class="cat" href="adultoJoven.html">Adulto joven</a>
+          </div>
+        </div>
+
+        <!-- No ficción -->
+        <div class="categoria">
+          <button class="categoria-btn">No ficción <span class="material-icons flecha">
+              expand_more
+            </span></button>
+          <div class="subcategoria">
+            <a class="cat" href="#">Autoayuda</a>
+            <a class="cat" href="#">Psicología</a>
+            <a class="cat" href="#">Filosofía</a>
+            <a class="cat" href="#">Espiritualidad</a>
+            <a class="cat" href="#">Esoterismo</a>
+            <a class="cat" href="#">Finanzas y desarrollo personal</a>
+            <a class="cat" href="#">Historia</a>
+          </div>
+        </div>
+
+        <!-- Destacados -->
+        <div class="categoria">
+          <button class="categoria-btn">Destacados <span class="material-icons flecha">
+              expand_more
+            </span></button>
+          <div class="subcategoria">
+            <a class="cat" href="nuevos.html">Nuevos</a>
+            <a class="cat" href="#">Novedades</a>
+            <a class="cat" href="descuentos.html">Descuentos</a>
+            <a class="cat" href="navidad.html">Navidad</a>
+            <a class="cat" href="usados.html">Usados</a>
+            <a class="cat" href="otros.html">Otros</a>
+          </div>
+        </div>
+
+        <!-- Cultura y ocio -->
+        <div class="categoria">
+          <button class="categoria-btn">Cultura y ocio <span class="material-icons flecha">
+              expand_more
+            </span></button>
+          <div class="subcategoria">
+            <a class="cat" href="geek.html">Cultura geek</a>
+            <a class="cat" href="cafeteria.html">Cafetería</a>
+            <a class="cat" href="tienda.html">Tienda literaria</a>
+          </div>
+        </div>
+      </div>
+    </aside>
+     <!-- Overlay para fondo oscuro -->
+    <div class="overlay" id="overlay"></div>
+
+    <main class="catalog">
       <div >
-        <h2>DESCUENTOS</h2>
+        <h2>OTROS</h2>
         <div class="product-grid">
           <div class="product-card">
-            <img src="../imagenes/descuentos/9788419252418_20fee43144.webp" alt="CUANDO DESPIERTE...">
-            <h3>una perdición de ruina</h3>
-            <p class="price">₡14000</p>
+            <img src="../imagenes/otros/R_7cabcef91a.jpeg" alt="CUANDO DESPIERTE...">
+            <h3>LA CABAÑA</h3>
+            <p class="price">₡12500</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/descuentos/mejor_que_ayer_112102_921a301d07.jpg" alt="HOTARU">
-            <h3>MEJOR QUE AYER
+            <img src="../imagenes/otros/46131583_c3d3537775.jpg" alt="HOTARU">
+            <h3>CAMBIEMOS EL MUN...
             </h3>
+            <p class="price">₡8000</p>
+          </div>
+          <div class="product-card">
+            <img src="../imagenes/otros/OIP_4_ff24a707b0.jpeg" alt="EL HOMBRE DE TIZA">
+            <h3>EN AGOSTO NOS VEM...</h3>
+            <p class="price">₡14800</p>
+          </div>
+          <div class="product-card">
+            <img src="../imagenes/otros/1_36b9c1a171.jpeg" alt="EL INVIERNO DEL LOBO">
+            <h3>LA MUJER QUE SOY</h3>
+            <p class="price">₡18500</p>
+          </div>
+          <div class="product-card">
+            <img src="../imagenes/otros/L_97_TUNEL_626a236384.jpg" alt="LA IRA DE LOS ÁNGELES">
+            <h3>EL TÚNEL DEL MÁS AL...</h3>
             <p class="price">₡10000</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/descuentos/las_luces_de_febrero_111143_42c54522fe.jpg" alt="EL HOMBRE DE TIZA">
-            <h3>LAS LUCES DE FEBRERO</h3>
-            <p class="price">₡15000</p>
+            <img src="../imagenes/otros/63845548_22015b3ec3.jpg" alt="LA IRA DE LOS ÁNGELES">
+            <h3>TALLER DE STORYCOA...</h3>
+            <p class="price">₡10400</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/descuentos/OIP_11_2cb9bdb7fb.jpeg" alt="EL INVIERNO DEL LOBO">
-            <h3>EL HOMBRE MÁS RIC...</h3>
-            <p class="price">₡7500</p>
+            <img src="../imagenes/otros/81_N4_D55n_CL_SY_425_791d8a1e16.jpg" alt="EL PSICOANALISTA">
+            <h3>EL LIBRO DE LAS CULT...</h3>
+            <p class="price">₡8000</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/descuentos/90871a_d763947f82c7441cb8dd5e7b2394422c_mv2_2c32c87240.webp" alt="LA IRA DE LOS ÁNGELES">
-            <h3>EL DIARIO DE ANA FR...</h3>
-            <p class="price">₡13500</p>
+            <img src="../imagenes/otros/OIP_5_1d523f84b5.jpeg" alt="CUANDO DESPIERTEN LAS FLORES">
+            <h3>CASADA CON UNA LEYE...</h3>
+            <p class="price">₡11800</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/descuentos/9788419030962_f03d6042b6.webp" alt="LA IRA DE LOS ÁNGELES">
-            <h3>TLA CIUDAD DEL POLV...</h3>
-            <p class="price">₡16800</p>
+            <img src="../imagenes/otros/FM_8067_18ce3436f9.jpg" alt="SCARPETTA">
+            <h3>LOS JUDÍOS, EL MUND...</h3>
+            <p class="price">₡25400</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/descuentos/f50219f2_ae65_48d5_b1ff_9e283d13356e_72f76c6c93.jpeg" alt="EL PSICOANALISTA">
-            <h3>EL ARTE DE ENGAÑAR</h3>
-            <p class="price">₡9500</p>
+            <img src="../imagenes/otros/historia_del_rock_104738_34e0e17411.jpg" alt="SCARPETTA">
+            <h3>HISTORIA DEL ROCK</h3>
+            <p class="price">₡8500</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/descuentos/180193283_cd8c04fab6.jpg" alt="CUANDO DESPIERTEN LAS FLORES">
-            <h3>MÁS ALLÁ DE LOS BRI...
-
+            <img src="../imagenes/otros/R_1_7b329daf3f.jpeg" alt="SCARPETTA">
+            <h3>LOS DE ABAJO</h3>
+            <p class="price">₡3100</p>
+          </div>
+          <div class="product-card">
+            <img src="../imagenes/otros/B_3d03d3fd7f.jpeg" alt="SCARPETTA">
+            <h3>LOS GENIOS</h3>
+            <p class="price">₡16500</p>
+          </div>
+          <div class="product-card">
+            <img src="../imagenes/otros/D_c1cb9ad5e2.jpeg" alt="SCARPETTA">
+            <h3>PÁJAROS QUE SE QUE...</h3>
+            <p class="price">₡13000</p>
+          </div>
+          <div class="product-card">
+            <img src="../imagenes/otros/81_N4_D55n_CL_SY_425_791d8a1e16.jpg" alt="SCARPETTA">
+            <h3>CINE CENTROAMERIC...
             </h3>
-            <p class="price">₡10500</p>
+            <p class="price">₡16000</p>
           </div>
           <div class="product-card">
-            <img src="../imagenes/descuentos/quedara_el_amor_112674_876d7d90e0.jpg" alt="SCARPETTA">
-            <h3>QUEDARA EL AMOR</h3>
-            <p class="price">₡14000</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/descuentos/9788419085597_3e9f55c53d.webp" alt="SCARPETTA">
-            <h3>CUANDO EL CIELO SE...</h3>
-            <p class="price">₡13500</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/descuentos/cuando_acabe_el_invierno_y_volvamos_a_volar_108718_78e745d860.jpg" alt="SCARPETTA">
-            <h3>CUANDO ACABE EL IN...</h3>
-            <p class="price">₡13500</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/descuentos/213153393_e00035d158.jpg" alt="SCARPETTA">
-            <h3>JOSH Y HAZEL: GUÍA...</h3>
-            <p class="price">₡13500</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/descuentos/OIP_51_cf25c54b80.jpeg" alt="SCARPETTA">
-            <h3>MESTIZA</h3>
-            <p class="price">₡13500</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/descuentos/el_gato_que_cuidaba_las_bibliotecas_112802_dffaf49ba6.jpg" alt="SCARPETTA">
-            <h3>EL GATO QUE CUIDAB...
-            </h3>
-            <p class="price">₡12000</p>
-          </div>
-          <div class="product-card">
-            <img src="../imagenes/descuentos/71lz_Pt0_Zc7_L_SL_1496_0f6ddffa24.jpg" alt="SCARPETTA">
-            <h3>HECHIZADA</h3>
-            <p class="price">₡13500</p>
+            <img src="../imagenes/otros/41z_A3_Me7a_QL_SY_445_SX_342_1968bb7de0.jpg" alt="SCARPETTA">
+            <h3>INVISIBLE</h3>
+            <p class="price">₡16700</p>
           </div>
         </div>
       </div>
@@ -166,7 +258,7 @@ f=false,w=window,d=document,v=d.querySelector('#vwoCode'),cK='_vwo_'+account_id+
       <div style="display: flex; justify-content: space-between;">
         <div>
           <img src="../imagenes/logo (1).png" alt="Logo Libros Arzu" class="logo" style="    width: 100px;
-    height: auto; display: block;" />
+    height: auto;" />
         </div>
         <div style="text-align: justify; width: 50%;">
           <h3 style="font-size: 15px; font-weight: 700; margin-bottom: 10px; color: #fff;">Sobre Nosotros</h3>
@@ -196,7 +288,7 @@ f=false,w=window,d=document,v=d.querySelector('#vwoCode'),cK='_vwo_'+account_id+
       </div>
     </div>
   </footer>
-  <script src="/main.js"></script>
+  <script src="/mainVariante.js"></script>
 </body>
 
 </html>
